fix menu on mobile

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -288,3 +288,8 @@ ul.social-buttons > li {
 .notices p {
     padding-right: 30px;
 }
+
+#g-offcanvas .g-content {
+    padding-top: 1rem;
+    margin-top: 1rem;
+}
